# SCompressor

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib-gif/: CMakeLists.txt
lib-gif/src/main/cpp/: GifDecoder.cpp  GifDecoder.h  GifEncoder.cpp  GifEncoder.h  lib-native-bridge.cpp
lib-gif/src/main/cpp/giflib/: CMakeLists.txt
lib-scompressor/: CMakeLists.txt  build.gradle
lib-scompressor/src/androidTest/java/com/sharry/lib/: ExampleInstrumentedTest.java
lib-scompressor/src/androidTest/java/com/sharry/libscompressor/: ExampleInstrumentedTest.java
lib-scompressor/src/main/: AndroidManifest.xml
lib-scompressor/src/main/adapter/com/sharry/lib/scompressor/: InputAdapter.java  InputBitmapAdapter.java  InputBitmapWriter.java  InputFilePathAdapter.java  InputFilePathWriter.java  InputWriter.java  OutputAdapter.java  OutputBitmapAdapter.java  OutputByteArrayAdapter.java  OutputFileAdapter.java  OutputFilePathAdapter.java
lib-scompressor/src/main/api/com/sharry/lib/scompressor/: CompressFormat.java  ICompressorCallback.java  ICompressorCallbackLambda.java  SCompressor.java
lib-scompressor/src/main/caller/com/sharry/lib/scompressor/: AsyncCaller.java  SyncCaller.java
lib-scompressor/src/main/cpp/: Constants.h  lib-native-bridge.cpp  lib_compressor_Core.cpp  lib_scompressor_Core.cpp  lib_scompressor_core.cpp  libjpegturbo_utils.cpp  libjpegturbo_utils.h
lib-scompressor/src/main/data/com/sharry/lib/scompressor/: DataSource.java  InputSource.java  Request.java
lib-scompressor/src/main/executor/com/sharry/lib/scompressor/: AsyncCall.java  CompressDispatcher.java  ICall.java  SyncCall.java
lib-scompressor/src/main/input/com/sharry/lib/scompressor/: InputAdapter.java  InputBitmapAdapter.java  InputFilePathAdapter.java  InputFileUriAdapter.java  InputUriAdapter.java
lib-scompressor/src/main/java/com/sharry/lib/scompressor/: AsyncCall.java  CompressCallback.java  CompressCallbackLambda.java  CompressDispatcher.java  Core.java  DataSource.java  InputAdapter.java  InputBitmapAdapter.java  InputFilePathAdapter.java  OutputAdapter.java  OutputBitmapAdapter.java  OutputByteArrayAdapter.java  OutputFilePathAdapter.java  Preconditions.java  Request.java  SCompressor.java
lib-scompressor/src/main/java/com/sharry/libscompressor/: AsyncCall.java  CompressCallback.java  CompressDispatcher.java  Core.java  DataSource.java  Preconditions.java  Request.java  SCompressor.java
lib-scompressor/src/main/jniLibs/include/: jerror.h  jpeglib.h
lib-scompressor/src/main/output/com/sharry/lib/scompressor/: OutputAdapter.java  OutputBitmapAdapter.java  OutputByteArrayAdapter.java  OutputFilePathAdapter.java  OutputUriAdapter.java
lib-scompressor/src/main/res/values/: strings.xml
lib-scompressor/src/main/utils/com/sharry/lib/scompressor/: Core.java  FileUtil.java  ImageUtil.java  Preconditions.java
lib-scompressor/src/main/utils/com/sharry/lib/scompressor/recycleable/: ArrayPool.java  ByteArrayPool.java  LruArrayPool.java  LruByteArrayPool.java  RecyclableBufferedInputStream.java
lib-scompressor/src/main/writer/com/sharry/lib/scompressor/: FileDescriptorAdapter.java  InputBitmapAdapter.java  InputBitmapWriter.java  InputFilePathAdapter.java  InputFilePathWriter.java  InputUriAdapter.java  InputWriter.java
lib-scompressor/src/test/java/com/sharry/libscompressor/: ExampleUnitTest.java
(+30 files in other folders)
